--- a/Project/ex0.ipynb
+++ b/Project/ex0.ipynb
@@ -10,14 +10,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "id": "c4605cad",
    "metadata": {},
    "outputs": [],
    "source": [
     "# Imports\n",
     "\n",
-    "import numpy as np"
+    "import numpy as np\n",
+    "from time import time"
    ]
   },
   {
@@ -33,7 +34,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 2,
    "id": "531a2391",
    "metadata": {},
    "outputs": [],
@@ -60,7 +61,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 10,
    "id": "514bafbc",
    "metadata": {},
    "outputs": [
@@ -68,14 +69,14 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "(10, 300)\n"
+      "(50, 3000)\n"
      ]
     }
    ],
    "source": [
     "# Example\n",
-    "p = 10\n",
-    "N = 300\n",
+    "p = 50\n",
+    "N = 3000\n",
     "\n",
     "patterns = gen_balanced_patterns(p,N)\n",
     "\n",
@@ -94,7 +95,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 11,
    "id": "44a1cc58",
    "metadata": {},
    "outputs": [],
@@ -103,11 +104,11 @@
     "\n",
     "    ''' \n",
     "    Inputs :\n",
-    "    S : np.ndarray of size (1,N) (state of the network at time i)\n",
+    "    S : np.ndarray of size (N,1) (state of the network at time i)\n",
     "    patterns : np.ndarray of size (p,N) (patterns that have to be compared to the state)\n",
     "\n",
     "    Output :\n",
-    "    next_state : np.ndarray of size (1,N) (state of the network at time i+1)\n",
+    "    next_state : np.ndarray of size (N,1) (state of the network at time i+1)\n",
     "    '''\n",
     "    \n",
     "    N = patterns.shape[1]\n",
@@ -116,9 +117,10 @@
     "    w = 1/N * patterns.T @ patterns\n",
     "\n",
     "    # Diagonal has to be 0, as the sum has to be over odd numbers to avoid getting 0 as a result\n",
-    "    np.fill_diagonal(w, 0)\n",
+    "    # Irrelevant as long as you do more than one step\n",
+    "    # np.fill_diagonal(w, 0)\n",
     "    # Follow Eq. 1.2 to update state\n",
-    "    h = w @ S.T\n",
+    "    h = w @ S\n",
     "    next_state = np.sign(h)\n",
     "    \n",
     "    return next_state\n",
@@ -126,25 +128,75 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": 17,
-   "id": "abad9e4a",
+   "cell_type": "markdown",
+   "id": "12419c69",
    "metadata": {},
-   "outputs": [],
    "source": [
-    "# Example\n",
-    "S = np.ones((1,N))\n",
-    "\n",
-    "next = next_state(S, patterns)"
+    "### Exercise 0.3"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 14,
    "id": "84d08e3b",
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "def acc_next_state(S : np.ndarray, patterns : np.ndarray) :\n",
+    "\n",
+    "    ''' \n",
+    "    Inputs :\n",
+    "    S : np.ndarray of size (N,1) (state of the network at time i)\n",
+    "    patterns : np.ndarray of size (p,N) (patterns that have to be compared to the state)\n",
+    "\n",
+    "    Output :\n",
+    "    next_state : np.ndarray of size (N,1) (state of the network at time i+1)\n",
+    "    '''\n",
+    "    \n",
+    "    p = patterns.shape[0]\n",
+    "    N = patterns.shape[1]\n",
+    "\n",
+    "    # Compute overlap variables\n",
+    "    m = 1/N * patterns @ S # (pxN) x (Nx1)\n",
+    "    h = patterns.T @ m  # (Nxp) x (px1)\n",
+    "    next_state = np.sign(h)\n",
+    "    \n",
+    "    return next_state"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 17,
+   "id": "52a247c1",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Time first alg : 0.05081295967102051\n",
+      "Time 2nd alg : 0.008022069931030273\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Time comparison\n",
+    "\n",
+    "S = np.ones((N,1))\n",
+    "\n",
+    "start = time()\n",
+    "\n",
+    "next = next_state(S, patterns)\n",
+    "\n",
+    "stop = time()\n",
+    "\n",
+    "acc_next = acc_next_state(S, patterns)\n",
+    "\n",
+    "end = time()\n",
+    "\n",
+    "print('Time first alg :', stop - start)\n",
+    "print('Time 2nd alg :', end - stop)\n"
+   ]
   }
  ],
  "metadata": {
