Up to 1.3 (not very clean but plots are here)

--- a/Project/project.ipynb
+++ b/Project/project.ipynb
@@ -10,7 +10,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": null,
    "id": "c4605cad",
    "metadata": {},
    "outputs": [],
@@ -18,7 +18,9 @@
     "# Imports\n",
     "\n",
     "import numpy as np\n",
-    "from time import time"
+    "from time import time\n",
+    "from utils import *\n",
+    "# To access the functions of this notebook, ctrl + click on them"
    ]
   },
   {
@@ -34,34 +36,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
-   "id": "531a2391",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "def gen_balanced_patterns(p,N) :\n",
-    "    '''\n",
-    "    Inputs :\n",
-    "    p : number of patterns\n",
-    "    N : Size of each pattern (must be odd !)\n",
-    "    \n",
-    "    Outputs :\n",
-    "    patterns : np.ndarray of size (p,N)\n",
-    "    '''\n",
-    "\n",
-    "    patterns = np.zeros((p,N), dtype=int)\n",
-    "\n",
-    "    for i in np.arange(p) :\n",
-    "        pattern = np.array([1] * (N // 2) + [-1] * (N // 2))\n",
-    "        np.random.shuffle(pattern)\n",
-    "        patterns[i] = pattern\n",
-    "\n",
-    "    return patterns\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 3,
    "id": "514bafbc",
    "metadata": {},
    "outputs": [
@@ -94,40 +69,6 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": 11,
-   "id": "44a1cc58",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "def next_state(S : np.ndarray, patterns : np.ndarray) :\n",
-    "\n",
-    "    ''' \n",
-    "    Inputs :\n",
-    "    S : np.ndarray of size (N,1) (state of the network at time i)\n",
-    "    patterns : np.ndarray of size (p,N) (patterns that have to be compared to the state)\n",
-    "\n",
-    "    Output :\n",
-    "    next_state : np.ndarray of size (N,1) (state of the network at time i+1)\n",
-    "    '''\n",
-    "    \n",
-    "    N = patterns.shape[1]\n",
-    "\n",
-    "    # Compute weights array (Eq. 1.1), a p x p symmetric array\n",
-    "    w = 1/N * patterns.T @ patterns\n",
-    "\n",
-    "    # Diagonal has to be 0, as the sum has to be over odd numbers to avoid getting 0 as a result\n",
-    "    # Irrelevant as long as you do more than one step\n",
-    "    # np.fill_diagonal(w, 0)\n",
-    "    # Follow Eq. 1.2 to update state\n",
-    "    h = w @ S\n",
-    "    next_state = np.sign(h)\n",
-    "    \n",
-    "    return next_state\n",
-    "\n"
-   ]
-  },
-  {
    "cell_type": "markdown",
    "id": "12419c69",
    "metadata": {},
@@ -137,36 +78,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
-   "id": "84d08e3b",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "def acc_next_state(S : np.ndarray, patterns : np.ndarray) :\n",
-    "\n",
-    "    ''' \n",
-    "    Inputs :\n",
-    "    S : np.ndarray of size (N,1) (state of the network at time i)\n",
-    "    patterns : np.ndarray of size (p,N) (patterns that have to be compared to the state)\n",
-    "\n",
-    "    Output :\n",
-    "    next_state : np.ndarray of size (N,1) (state of the network at time i+1)\n",
-    "    '''\n",
-    "    \n",
-    "    p = patterns.shape[0]\n",
-    "    N = patterns.shape[1]\n",
-    "\n",
-    "    # Compute overlap variables\n",
-    "    m = 1/N * patterns @ S # (pxN) x (Nx1)\n",
-    "    h = patterns.T @ m  # (Nxp) x (px1)\n",
-    "    next_state = np.sign(h)\n",
-    "    \n",
-    "    return next_state"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 4,
    "id": "52a247c1",
    "metadata": {},
    "outputs": [
@@ -174,8 +86,8 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Time first alg : 0.05081295967102051\n",
-      "Time 2nd alg : 0.008022069931030273\n"
+      "Time first alg : 0.049407958984375\n",
+      "Time 2nd alg : 0.006531476974487305\n"
      ]
     }
    ],
